@@ -5,16 +5,15 @@ i18n_install_all="no"
 
 # build initrd only to boot current hardware
 hostonly="no"
-hostonly_cmdline="no"
 
 # always include these modules
-add_drivers+=" af_packet ahci ata_generic aufs cciss cdrom ehci_hcd ehci-pci ehci-platform evdev ext3 ext4 hid hpsa i915 ide-cd iso9660 isofs mptbase mptscsih mptspi nouveau ohci_hcd pata_acpi radeon reiserfs scsi_transport_spi sd_mod sr_mod uhci_hcd usb_storage usbhid "
+add_drivers+=" af_packet ahci ata_generic aufs cciss cdrom ehci_hcd ehci-pci ehci-platform evdev ext3 ext4 hid hpsa i915 ide-cd iso9660 isofs mptbase mptscsih mptspi nouveau ohci_hcd pata_acpi radeon reiserfs scsi_transport_spi sd_mod sr_mod uhci_hcd usb_storage usbhid xhci-hcd xhci-pci xhci-plat-hcd "
 
 # list of kernel filesystem modules to be included in the generic initramfs
-filesystems+=" vfat isofs squashfs aufs "
+filesystems+=" vfat msdos isofs ext3 ext4 btrfs squashfs aufs "
 
 # load these modules
-add_dracutmodules+=" systemd pollcdrom liveiso lvm dm "
+add_dracutmodules+=" systemd  pollcdrom liveiso "
 
 # do not load these modules
 omit_drivers+=" "
@@ -22,7 +21,7 @@ omit_drivers+=" "
 # do not include these modules
 # if you really need network module just remove it form here
 # also disable aufs support
-omit_dracutmodules+=" resume network nfs ifcfg cifs multipath mdraid dmraid dmsquash-live "
+omit_dracutmodules+=" dmsquash-live dm resume network lvm nfs ifcfg cifs multipath mdraid dmraid "
 
 # set compression method
 compress_l="xz"
